# cpp_snake

./: CMakeLists.txt  README.md  main.cpp
assets/: texture
lib/: Board.h  Controller.h  GameObjects.h  GameView.h  Menu.h  MenuController.h  Scoreboard.h
src/: Board.cpp  Controller.cpp  GameObjects.cpp  GameView.cpp  Menu.cpp  MenuController.cpp  Scoreboard.cpp
